<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookSwapper-App</string>
    <string name="isbn">ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="description">Description</string>
    <string name="not_found">Could not find any details for this ISBN.</string>
    <string name="error_scan">Error during scanning!</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="manual_search">Manual search</string>
    <string name="copyright">"\u00A9 2012 T. Geppert</string>
    <string name="bookswapper">www.bookswapper.de</string>
    <string name="not_connected">An active internet connection is required to search for books. Please check!</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="info">Info</string>
    <string name="app_name_internal">BlueZed-Bookswapper/</string>
    <string name="email">bluezed.apps@googlemail.com</string>
    <string name="feedback_link">mailto:bluezed.apps@googlemail.com?subject=BookSwapper%20App%20Feedback</string>
    <string name="bookswapper_legal">Note that I have no affiliation with the developers of bookswapper.de, I just like the site and thought it would be nice to have an app to work with it.\nIf you\'d like to find out more about bookswapper.de, visit the website:</string>
    <string name="bookswapper_link">http://www.bookswapper.de</string>
    <string name="published">Published</string>
    <string name="pages">Pages</string>
    <string name="format">Format</string>
    <string name="paperback">Paperback</string>
    <string name="hardcover">Hardcover</string>
    <string name="submit">Submit</string>
    <string name="condition">Condition</string>
    <string name="condition_prompt">Book\'s condition</string>
    <string-array name="condition_array">
        <item>Top</item>
        <item>Good</item> 
        <item>Still readable</item>
    </string-array>
    <string name="category">Category</string> 
    <string name="category_prompt">Choose a category</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="remember">Remember</string>
    <string name="login_prompt">Login to bookswapper.de</string>
    <string name="login_error">Could not login!</string>
    <string name="data_missing">Not all fields have been filled in!</string>
    <string name="success">Success</string>
    <string name="book_added">Your book has been added!</string>
    <string name="book_not_added">Your book could not be added!</string>
    <string name="change_login">Change login</string>
    <string name="about">About\u002E\u002E\u002E</string>
    <string name="version">Version</string>
    <string name="tags">Additional tags (separate by ,)</string>
    <string name="top_line">Scan a barcode or enter an ISBN and use the manual search\u002E\u002E\u002E</string>
    <string name="add_book">Add</string>
    <string name="my_books">Mine</string>
    <string name="search_books">Search</string>
    <string name="listed">Listed</string>
    <string name="select_option">Select option</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="book_tags">Tags</string>
    <string name="loading_failed">Loading data failed!</string>
    <string name="not_logged_in">Not logged in!</string>
    <string name="welcome">Welcome to BookSwapper!</string>
    <string name="more_welcome">Here you can manage your books, add new ones and search the site for books to swap.\n\nTo use the app fully you will require an account at bookswapper.de!</string>
    <string name="sign_up">If you don\'t have an account yet this button will open your web browser so you can sign up!</string>
    <color name="colour_black">#000000</color>
    <color name="colour_white">#FFFFFF</color>
    <string name="swap_book">Swap book</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_tokens">Show tokens</string>
    <string name="token_amount">Your current tokens:</string>
    <string name="not_enough_tokens">Sorry!\nYou do not have enough tokens for this swap!</string>
    <string name="your_own_book">You can\'t swap your own book!</string>
    <string name="book_not_changed">Changes could not be saved!</string>
    <string name="book_changed">Changes were saved!</string>
    <string name="currenty_reading">currently reading</string>
    <string name="on_holiday">on holiday</string>
    <string name="query_result">Query \'%1$s\' returned %2$s results.</string>
    <string name="showing_first">\nShowing the first 50\u002E\u002E\u002E</string>
    <string name="crash_toast_text">Ooooops! I crashed :(\nPlease send a report to my developer to help him fix the issue!</string>
	<string name="crash_notif_ticker_text">Unexpected error, please send a report\u002E\u002E\u002E</string>
	<string name="crash_notif_title">Bookswapper-App crashed\u002E\u002E\u002E</string>
	<string name="crash_notif_text">Please click here to help fix the issue.</string>
	<string name="crash_dialog_title">Bookswapper-App crashed</string>
	<string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click \'OK\'.</string>
	<string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
	<string name="crash_dialog_ok_toast">Thank you!</string>
	<color name="colour_grey">#999999</color>
	<string name="loading">Loading</string>
	<string name="please_wait">Please wait\u002E\u002E\u002E</string>
	<string name="my_swaps">Swaps</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="feedback">Give feedback</string>
    <string name="comment">Comment</string>
    <string name="positive">Positive</string>
    <string name="neutral">Neutral</string>
    <string name="negative">Negative</string>
    <string name="incoming">incoming</string>
    <string name="outgoing">outgoing</string>
    <string name="swap">Swap</string>
    <string name="mark_shipped">Mark as shipped</string>
    <string name="mark_received">Mark as received</string>
    <string name="address">Address</string>
    <string name="status">Status</string>
    <string name="shipped">shipped on</string>
    <string name="not_shipped">ordered on</string>
    <string name="swap_message">Incoming: %1$s\nOutgoing: %2$s</string>
    <string name="current_books">Listed: %1$s\nReading: %2$s\nOn holiday: %3$s</string>
</resources>