<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/LinearLayoutEdit1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android">
	
	<ScrollView android:id="@+id/ScrollViewEdit1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

		<LinearLayout
		    android:id="@+id/LinearLayoutEdit2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
		    <TextView
		        android:id="@+id/textViewEditBook"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/edit_book"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		    
		    
		    <LinearLayout
		        android:id="@+id/linearLayoutEdit6"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >

		         <ImageView 
				   android:id="@+id/imageViewEditCover"
				   android:src="@drawable/empty"
				   android:adjustViewBounds="true"
				   android:layout_width="110dp"
				   android:layout_height="150dp"
				   android:layout_marginTop="15dp"
				   android:layout_marginBottom="15dp" />

		         <Button
		             android:id="@+id/buttonPhoto2"
		             android:layout_width="fill_parent"
		             android:layout_height="50dp"
		             android:layout_gravity="center_vertical"
		             android:onClick="onPhotoClick"
		             android:text="@string/add_photo" />
		         
		     </LinearLayout>

		    <TextView
		        android:id="@+id/textViewEditTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/title"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <EditText
		        android:id="@+id/editTextEditTitle"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:inputType="text" />


		    <TextView
		        android:id="@+id/textViewEditAuthor"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/author"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <EditText
		        android:id="@+id/editTextEditAuthor"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:inputType="text" />


		    <TextView
		        android:id="@+id/textViewEditPublisher"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/publisher"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <EditText
		        android:id="@+id/editTextEditPublisher"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:inputType="text" />

		    <LinearLayout
		        android:id="@+id/linearLayoutEdit7"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >

		        <LinearLayout
		            android:id="@+id/linearLayoutEdit8"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:orientation="vertical" >


		            <TextView
		                android:id="@+id/textViewEditPublished"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/published"
		                android:textAppearance="?android:attr/textAppearanceMedium" />

		            <EditText
		                android:id="@+id/editTextEditPublished"
		                android:layout_width="150dp"
		                android:layout_height="wrap_content"
		                android:inputType="number" />

		        </LinearLayout>

		        <LinearLayout
		            android:id="@+id/linearLayoutEdit9"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:orientation="vertical" >


		            <TextView
		                android:id="@+id/textViewEditPages"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/pages"
		                android:textAppearance="?android:attr/textAppearanceMedium" />

		            <EditText
		                android:id="@+id/editTextEditPages"
		                android:layout_width="150dp"
		                android:layout_height="wrap_content"
		                android:inputType="number" />

		        </LinearLayout>

		    </LinearLayout>

		    <TextView
			    android:id="@+id/textViewEditISBN"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/isbn"
			    android:textAppearance="?android:attr/textAppearanceMedium" />

			<EditText
			    android:id="@+id/editTextEditISBN"
			    android:layout_width="300dp"
			    android:layout_height="wrap_content"
			    android:inputType="text" />
		    
		    <TextView
		        android:id="@+id/textViewEditFormat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/format"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <RadioGroup
		        android:id="@+id/radioGroupFormat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >

		        <RadioButton
		            android:id="@+id/radioEditFormatPaperback"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/paperback" />

		        <RadioButton
		            android:id="@+id/radioEditFormatHardcover"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/hardcover" />

		    </RadioGroup>
		    
		    <TextView
		        android:id="@+id/textViewEditCondition"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/condition"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
			<Spinner
		        android:id="@+id/spinnerEditCondition"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:prompt="@string/condition_prompt" />
			
		    <TextView
		        android:id="@+id/textViewEditCategory"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/category"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
			<Spinner
		        android:id="@+id/spinnerEditCategory"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:prompt="@string/category_prompt" />
			
		    <TextView
		        android:id="@+id/textViewEditDescription"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/description"
		        android:textAppearance="?android:attr/textAppearanceMedium" />


		    <EditText
		        android:id="@+id/editTextEditDescription"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:gravity="top"
		        android:inputType="textMultiLine" />
		    
		    <TextView
		        android:id="@+id/textViewEditTags"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tags"
		        android:textAppearance="?android:attr/textAppearanceMedium" />


		    <EditText
		        android:id="@+id/editTextEditTags"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:gravity="top"
		        android:inputType="textMultiLine" />
		    
		    <Button
				    android:id="@+id/buttonEditSubmit"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:onClick="onEditSubmitClick"
				    android:text="@string/submit" />

		</LinearLayout>

	</ScrollView>

</LinearLayout>
