<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    	android:layout_height="fill_parent" 
    	xmlns:android="http://schemas.android.com/apk/res/android">
	  
	<LinearLayout android:id="@+id/LinearLayoutSwap1"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical" 
		xmlns:android="http://schemas.android.com/apk/res/android">

	    <TableLayout
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:shrinkColumns="1"
	        android:stretchColumns="*" >

	        <TableRow android:layout_height="wrap_content" >
	            <TextView
	                android:layout_marginRight="5dp"
	                android:gravity="right"
	                android:padding="3dip"
	                android:text="@string/title"
	                android:textStyle="bold" />

	            <TextView
	                android:id="@+id/textSwapTitle"
	                android:layout_height="wrap_content"
	                android:padding="3dip"
	                android:singleLine="false" />
	        </TableRow>

	        <TableRow>
	            <TextView
	                android:layout_marginRight="5dp"
	                android:gravity="right"
	                android:padding="3dip"
	                android:text="@string/author"
	                android:textStyle="bold" />

	            <TextView
	                android:id="@+id/textSwapAuthor"
	                android:padding="3dip" />
	        </TableRow>

	        <TableRow>
	            <TextView
	                android:layout_marginRight="5dp"
	                android:gravity="right"
	                android:padding="3dip"
	                android:text="@string/swap"
	                android:textStyle="bold" />

	            <TextView
	                android:id="@+id/textSwapType"
	                android:padding="3dip" />
	        </TableRow>

	        <TableRow>
	            <TextView
	                android:layout_marginRight="5dp"
	                android:gravity="right"
	                android:padding="3dip"
	                android:text="@string/status"
	                android:textStyle="bold" />

	            <TextView
	                android:id="@+id/textSwapStatus"
	                android:padding="3dip" />
	        </TableRow>

	        <TableRow>
	            <TextView
	                android:layout_marginRight="5dp"
	                android:gravity="right"
	                android:padding="3dip"
	                android:text="@string/user"
	                android:textStyle="bold" />

	            <TextView
	                android:id="@+id/textSwapUser"
	                android:padding="3dip" />
	        </TableRow>

	        <TableRow android:layout_height="wrap_content">
	            <TextView
	                android:id="@+id/textSwapAddressLabel"
	                android:layout_marginRight="5dp"
	                android:gravity="right"
	                android:padding="3dip"
	                android:text="@string/address"
	                android:textStyle="bold" />

	            <TextView
	                android:id="@+id/textSwapAddress"
	                android:padding="3dip" />
	        </TableRow>
	    </TableLayout>
	    
	    <Button
	        android:id="@+id/buttonSwapConfirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="35dp"
	        android:onClick="onSwapConfirmClick" />
	</LinearLayout>
</ScrollView>
